# Whirl-Rust

./: .gitignore  Cargo.toml  build_pylib.sh
literature/: S0021999110006753.bib  ar_astro48_391.bib  bibliography.bib  bibliography.bib.bak
python-whirl/: Cargo.toml
python-whirl/src/: lib.rs
python-whirl/testing/: test_rarefaction_wave.py  test_sod_shock_tube.py
python-whirl/whirl/: __init__.py
python-whirl/whirl/experiments/: __init__.py
src/: eos.rs  error.rs  fluid.rs  fluid2.rs  geometry.rs  initial.rs  kernel.rs  lib.rs  main.rs  num.rs  running.rs  stepping.rs  units.rs
src/eos/: adiabatic_ideal_gas.rs  ideal_gas.rs
src/fluid/: inviscid.rs  inviscid_isothermal.rs  isothermal.rs
src/initial/: energy.rs  grid.rs  mass.rs  rest.rs  velocity.rs
src/initial/energy/: isothermal.rs  piecewise_uniform.rs  uniform.rs
src/initial/mass/: piecewise_uniform.rs
src/initial/velocity/: rest.rs
src/kernel/: gaussian.rs
src/running/: experiments.rs
src/stepping/: euler.rs
src/units/: si.rs
